all thats left now is a bunch of shape making for icons in footer and section 2 of the site.

--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,23 @@ header {
     line-height: 26px;
 }
 
+.input-name {
+    width: 335px;
+    height: 1px;
+    border: none;
+    background-color: #071629;
+    opacity: 0.1745; /* 17.45% opacity */
+}
+
+footer {
+    background-color: #071629;
+     color: white;
+}
+footer p {
+    margin: 0;
+    opacity: 0.3517; /* 35.17% opacity for the text */
+}
+
 /* Mobile Styling */
 @media (max-width: 480px) {
     .hero-text {
