--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap');
+
 /* Header styles */
 header {
     position: relative;
@@ -11,6 +13,11 @@ header {
     align-items: flex-start;
     height: 100vh;
 }
+
+body {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
 
 .header-content {
     display: flex;
