--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ header {
 }
 
 body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif !important;
 }
 
 
