downloaded the files from the website checked file paths last thing to really do is possibly make a back up link?

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap');
 
+/* Trying the long way */
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('fonts/SourceSansPro-Regular.ttf') format('truetype'),
+         url('fonts/SourceSansPro-Regular.woff2') format('woff2'),
+         url('fonts/SourceSansPro-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('fonts/SourceSansPro-Bold.ttf') format('truetype'),
+         url('fonts/SourceSansPro-Bold.woff2') format('woff2'),
+         url('fonts/SourceSansPro-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+
 /* Header styles */
 header {
     position: relative;
