--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap');
 
-/* Trying the long way */
-@font-face {
-    font-family: 'Source Sans Pro';
-    src: url('fonts/SourceSansPro-Regular.ttf') format('truetype'),
-         url('fonts/SourceSansPro-Regular.woff2') format('woff2'),
-         url('fonts/SourceSansPro-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+body {
+    font-family: 'Source Sans Pro', sans-serif !important;
 }
 
-@font-face {
-    font-family: 'Source Sans Pro';
-    src: url('fonts/SourceSansPro-Bold.ttf') format('truetype'),
-         url('fonts/SourceSansPro-Bold.woff2') format('woff2'),
-         url('fonts/SourceSansPro-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-}
 
+h1, h2, h3, p, a {
+    font-family: 'Source Sans Pro', sans-serif;
+}
 
 /* Header styles */
 header {
@@ -33,11 +22,6 @@ header {
     align-items: flex-start;
     height: 100vh;
 }
-
-body {
-    font-family: 'Source Sans Pro', sans-serif !important;
-}
-
 
 .header-content {
     display: flex;
